--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
     "@heroicons/react": "^2.2.0",
+    "@heroui/react": "^2.7.4",
     "@reduxjs/toolkit": "^2.6.0",
     "antd": "^5.24.2",
+    "framer-motion": "^12.4.10",
+    "lucide-react": "^0.479.0",
     "next": "15.2.0",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
