--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@heroicons/react": "^2.2.0",
     "@heroui/react": "^2.7.4",
+    "@mui/material": "^6.4.7",
     "@reduxjs/toolkit": "^2.6.0",
     "antd": "^5.24.2",
     "framer-motion": "^12.4.10",
