--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@heroui/react": "^2.7.4",
     "@mui/material": "^6.4.7",
     "@reduxjs/toolkit": "^2.6.0",
+    "@types/mapbox-gl": "^3.4.1",
     "antd": "^5.24.2",
     "framer-motion": "^12.4.10",
     "lucide-react": "^0.479.0",
+    "mapbox-gl": "^3.10.0",
     "next": "15.2.0",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
