--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@mui/material": "^6.4.7",
     "@reduxjs/toolkit": "^2.6.0",
     "@types/mapbox-gl": "^3.4.1",
-    "antd": "^5.24.2",
+    "add": "^2.0.6",
+    "antd": "^5.24.3",
+    "badge": "^1.0.3",
     "framer-motion": "^12.4.10",
+    "heroui-cli": "^1.1.0",
     "lucide-react": "^0.479.0",
     "mapbox-gl": "^3.10.0",
     "next": "15.2.0",
@@ -32,6 +35,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4.0.13",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
