--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@emotion/styled": "^11.14.0",
     "@heroicons/react": "^2.2.0",
     "@heroui/react": "^2.7.4",
+    "@mapbox/mapbox-gl-draw": "^1.5.0",
     "@mui/material": "^6.4.7",
     "@reduxjs/toolkit": "^2.6.0",
+    "@turf/turf": "^7.2.0",
+    "@types/mapbox__mapbox-gl-draw": "^1.4.8",
     "@types/mapbox-gl": "^3.4.1",
     "antd": "^5.24.2",
     "framer-motion": "^12.4.10",
