--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "antd": "^5.24.3",
     "badge": "^1.0.3",
     "framer-motion": "^12.4.10",
-    "heroui-cli": "^1.1.0",
     "gsap": "^3.12.7",
     "heroui-cli": "^1.1.0",
     "lucide-react": "^0.479.0",
+    "mapbox": "^1.0.0-beta10",
     "mapbox-gl": "^3.10.0",
     "next": "15.2.0",
     "next-auth": "^4.24.11",
