add the next auth and connect to backend and fully finish  the auth pages

--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@types/mapbox-gl": "^3.4.1",
     "add": "^2.0.6",
     "antd": "^5.24.3",
+    "axios": "^1.8.4",
     "badge": "^1.0.3",
     "framer-motion": "^12.4.10",
     "gsap": "^3.12.7",
     "heroui-cli": "^1.1.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.483.0",
     "mapbox": "^1.0.0-beta10",
     "mapbox-gl": "^3.10.0",
