--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mapbox-gl": "^3.10.0",
     "next": "15.2.0",
     "next-auth": "^4.24.11",
+    "nookies": "^2.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
